--- a/auth/signup/signup.html
+++ b/auth/signup/signup.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Signup Form</title>
+    <link rel="shortcut icon" href="/images/to-do-list.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
